Fixed text overflow education in careers

--- a/app/assets/stylesheets/module/_great-jobs.scss
+++ b/app/assets/stylesheets/module/_great-jobs.scss
@@ -178,6 +178,14 @@
       @include background-image('careers/great-job-bg.jpg');
     }
   }
+
+  @include m('education') {
+    max-height: rem(62);
+
+    &:before {
+      top: rem(22);
+    }
+  }
 }
 
 // Button tell me jobs
